# oopclone-but-better

./: .gitignore  CMakeLists.txt  LICENSE  Play.bat  Play.command  Play.ps1  README.md
.omx/: notepad.md
.omx/context/: combined-ui-upgrades-phase2-20260325T064500Z.md  playtest-final-tuning-20260325T073235Z.md  realtime-4nation-territory-war-20260325T050515Z.md  realtime-4nation-territory-war-redesign-20260325T060312Z.md
.omx/plans/: autopilot-impl.md  autopilot-spec.md  cleanup-combined-ui-upgrades-phase2.md  cleanup-release-hygiene.md  consensus-combined-ui-upgrades-phase2.md  consensus-realtime-4nation-territory-war.md  prd-combined-ui-upgrades-phase2.md  prd-realtime-4nation-territory-war.md  test-spec-combined-ui-upgrades-phase2.md  test-spec-realtime-4nation-territory-war.md
assets/fonts/: README.md
docs/: combined-ui-upgrades-phase2-verification.md  manual-smoke-checklist.md  playtest-ui-balance-checklist.md  public-release-checklist.md  terrain-university-factions-verification.md  ui-style-guide.md
include/game/: App.hpp  GameConfig.hpp
include/game/ai/: AiDirector.hpp
include/game/sim/: AbilitySystem.hpp  ArmyTransit.hpp  CombatSystem.hpp  CommandQueue.hpp  MovementSystem.hpp  OrderIntent.hpp  Pathfinder.hpp  RegenSystem.hpp  ScoreSystem.hpp  Types.hpp  VictorySystem.hpp  WorldState.hpp
include/game/ui/: HoverPanel.hpp  InputController.hpp  Renderer.hpp  VisualTuning.hpp
src/: App.cpp  GameConfig.cpp  main.cpp
src/ai/: AiDirector.cpp
src/sim/: AbilitySystem.cpp  ArmyTransit.cpp  CombatSystem.cpp  CommandQueue.cpp  MovementSystem.cpp  Pathfinder.cpp  RegenSystem.cpp  ScoreSystem.cpp  VictorySystem.cpp  WorldState.cpp
src/ui/: HoverPanel.cpp  InputController.cpp  Renderer.cpp  RendererDetail.hpp  RendererGameOver.cpp  RendererMatch.cpp  RendererSelection.cpp  VisualTuning.cpp
tests/: ability_system_test.cpp  ai_behavior_test.cpp  input_command_test.cpp  renderer_layout_test.cpp  score_system_test.cpp  sim_rules_test.cpp  test_harness.hpp  test_main.cpp  ui_visual_tuning_test.cpp  victory_conditions_test.cpp
tools/: bootstrap_and_run.ps1  bootstrap_and_run.sh  package_portable.ps1  package_portable.sh  render_preview.cpp  start_playtest.sh
